# PinRex

./: .gitignore  CMakeLists.txt  README.md  regexCheck.js  requirements.txt  setup.py
PinRex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
c++/static/: input.json
include/: utils.hpp
src/: main.cpp  main.py  utils.cpp
src/haskell/: main.hs  utils.hs
static/: input.json  output.json
